# backend

./: .env  Cargo.toml  rustfinity.json  stocks.db
migrations/: 0001_init.sql
src/: errors.rs  main.rs  models.rs  regression_model.rs  state.rs  stocks_register.rs
src/auth/: extractor.rs  jwt.rs  password.rs
src/handlers/: admin.rs  auth.rs  mod.rs  stock_handler_tests.rs  stocks.rs
